create home page

--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
      <p>HTML (Hypertext Markup Language) is a text-based approach to describing how content contained within an HTML file is structured. This markup tells a web browser how to display text, images and other forms of multimedia on a webpage.</p>
 
      <p>java </p>
+
+     <a href="home.html">home</a>
+     <br>
+     <a href="about.html">about</a>
+     <br>
+     <a href="contact.html">contact</a>
 </body>
 </html>
