create about page

--- a/about.html
+++ b/about.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>about</title>
 </head>
 <body>
-    
+    <h1>About page</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus odio impedit perspiciatis quod! Quis neque, exercitationem minus corrupti rem sequi sunt debitis quia!</p>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci assumenda modi veniam aut. Aperiam blanditiis doloribus consectetur sunt veritatis laudantium consequuntur aliquid, pariatur repellat obcaecati vero dolorem aliquam minus harum! Pariatur nobis distinctio vero.</p>
 </body>
 </html>
