create contact page

--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>contact</title>
 </head>
 <body>
-    
+     <h1>contact page</h1>
+
+     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo inventore voluptatem amet eum sapiente magnam corporis harum porro eligendi nisi minus, recusandae ipsum!</p>
+
+     <h1>java script</h1>
+     <p>JavaScript is a programming language used to create dynamic content for websites. It achieves this by adding new HTML elements while modifying existing ones. Many coders enhance web development skills using JavaScript to create user-friendly and interactive websites</p>
 </body>
 </html>
