--- a/home.html
+++ b/home.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Home page</h1>
+    <img src="c:\Users\Student-09\Downloads\pexels-mayday-1545743.jpg" alt="">
 </body>
 </html>
