--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Home page</h1>
-    <img src="c:\Users\Student-09\Downloads\pexels-mayday-1545743.jpg" alt="">
+
+   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTo4Gf695DmIbLq3yVc5Eg2U2C_FD1dFV7UJA&s" alt="">
 </body>
 </html>
